Bug 1562425 - Ensure to bind ShadowRoot before explicit kids, so that slot directionality is up-to-date. r=smaug

When we're slotted, we inherit our directionality from the slot element. But
when binding an ltr subtree into an rtl subtree, we used to bind the explicit
kids first, then the shadow root kids (which includes the slots to which
explicit kids may have been assigned).

So the explicit kids looked at the slot directionality before it was recomputed,
and thus ended up with ltr rather than rtl directionality.

Differential Revision: https://phabricator.services.mozilla.com/D42304